fixed overlapping components in the footer section, acccount-setup section and nav section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -123,7 +123,7 @@ ul {
                 color: hsla(0, 0%, 100%, 0.87);
             }
 
-            @include desktop(760px) {
+            @include desktop(830px) {
                 display: initial;
 
                 .toggle {
@@ -341,6 +341,8 @@ header {
         grid-template-columns: repeat(auto-fit,minmax(270px, 424px));
         grid-row-gap: 24px;
         grid-column-gap: 24px;
+        justify-content: center;
+
 
         .as {
             .as-grid-container {
@@ -423,6 +425,18 @@ header {
         @include desktop(672px) {
             margin: 56px 0 88px;
             grid-row-gap: 48px;
+            .as {
+                border-radius: 4px;
+                background: rgba(255, 255, 255, 0.02);
+                padding: 24px;
+            }
+        }
+        @include desktop(992px) {
+            .as {
+                border-radius: none;
+                background: none;
+            }
+            
         }
 
 
@@ -679,9 +693,9 @@ footer {
         .st-footer {
             column-gap: 50px;
 
-            .about {
-                grid-column: 7/8;
-            }
+            // .about {
+            //     grid-column: 7/8;
+            // }
 
             li {
                 font-size: 16px;
